--- a/smart_sale/package.json
+++ b/smart_sale/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "jquery-react": "^1.0.0",
     "mdbreact": "^4.23.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
